// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`magi reducer default 1`] = `
Object {
  "acceptedPrices": Array [],
  "addresses": Array [],
  "states": Object {
    "firstPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
    "isStarted": false,
    "numOfPrices": 0,
    "priceFeedTimeTolerance": 0,
    "priceFeedTolerance": 0,
    "priceTolerance": 0,
    "priceUpdateCoolDown": 0,
    "secondPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiAcceptedPrices 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "addresses": Array [],
  "states": Object {
    "firstPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
    "isStarted": false,
    "numOfPrices": 0,
    "priceFeedTimeTolerance": 0,
    "priceFeedTolerance": 0,
    "priceTolerance": 0,
    "priceUpdateCoolDown": 0,
    "secondPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiSubscription off 1`] = `
Object {
  "acceptedPrices": Array [],
  "addresses": Array [],
  "states": Object {
    "firstPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
    "isStarted": false,
    "numOfPrices": 0,
    "priceFeedTimeTolerance": 0,
    "priceFeedTolerance": 0,
    "priceTolerance": 0,
    "priceUpdateCoolDown": 0,
    "secondPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
  },
  "subscription": 0,
}
`;

exports[`magi reducer magiSubscription off 2`] = `
Array [
  Array [
    123,
  ],
]
`;

exports[`magi reducer magiSubscription on 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "addresses": Array [],
  "states": Object {
    "firstPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
    "isStarted": false,
    "numOfPrices": 0,
    "priceFeedTimeTolerance": 0,
    "priceFeedTolerance": 0,
    "priceTolerance": 0,
    "priceUpdateCoolDown": 0,
    "secondPrice": Object {
      "price": 0,
      "source": "",
      "timestamp": 0,
    },
  },
  "subscription": 123,
}
`;
